--- a/ProyectoFinalAp2/ProyectoFinalAp2.csproj
+++ b/ProyectoFinalAp2/ProyectoFinalAp2.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <StartWorkingDirectory>$(MSBuilderProjectDirectory)</StartWorkingDirectory>
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.Toast" Version="3.1.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authorization" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Blazor.HttpClient" Version="3.2.0-preview3.20168.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SQLite" Version="3.1.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.4">
       <PrivateAssets>all</PrivateAssets>
@@ -24,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\Login\" />
+    <Folder Include="Data\" />
   </ItemGroup>
 
 </Project>
