Working in the style of the Login

--- a/ProyectoFinalAp2/ProyectoFinalAp2.csproj
+++ b/ProyectoFinalAp2/ProyectoFinalAp2.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="Resources\Login_Background.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Include="wwwroot\favicon.ico" />
   </ItemGroup>
 
