--- a/ProyectoFinalAp2/ProyectoFinalAp2.csproj
+++ b/ProyectoFinalAp2/ProyectoFinalAp2.csproj
@@ -25,10 +25,7 @@
     <PackageReference Include="NEST" Version="7.7.0" />
     <PackageReference Include="NPOI" Version="2.5.1" />
     <PackageReference Include="ServiceStack" Version="5.8.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Data\" />
+    <PackageReference Include="Syncfusion.Pdf.Net.Core" Version="18.2.0.45" />
   </ItemGroup>
 
 </Project>
